Post Details frontend layout update & cleanup

--- a/src/main/resources/templates/post_details.html
+++ b/src/main/resources/templates/post_details.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="title" content="Sex life & problems forum post details">
     <meta name="title" content="Ask online Form">
     <meta name="description"
           content="The Ask is a bootstrap design help desk, support forum website template coded and designed with bootstrap Design, Bootstrap, HTML5 and CSS. Ask ideal for wiki sites, knowledge base sites, support forum sites">
@@ -69,7 +70,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav"></ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="#" th:href="@{/}">Home</a></li>
                     <li><a href="ask_question.html">Ask Question</a></li>
                     <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
                                             aria-haspopup="true" aria-expanded="false">Question <span
@@ -114,7 +115,7 @@
     <div class="container">
         <h3>Post Details</h3>
         <ol class="breadcrumb breadcrumb839">
-            <li><a href="#">Home</a></li>
+            <li><a href="#" th:href="@{/}">Home</a></li>
             <li><a href="#">Post Details</a></li>
             <li class="active">This Is My first Question</li>
         </ol>
@@ -166,7 +167,12 @@
                         </div>
                     </div>
                     <div class="share-tags-page-content12092">
-                        <div class="l-share2093"><i class="fa fa-share" aria-hidden="true"> Share</i></div>
+                        <div class="l-share2093">
+                            <a th:href="@{'https://www.facebook.com/sharer/sharer.php?u=' + ${currentUrl}}"
+                               target="_blank"
+                               rel="noopener noreferrer">
+                                <i class="fa fa-share" aria-hidden="true"> Share</i></a>
+                        </div>
                         <div class="R-tags309">
                             <i class="fa fa-tags" aria-hidden="true">
                                 <span th:each="tag, iterStat : ${topic.tags}">
@@ -240,18 +246,26 @@
             <!--                end of col-md-9 -->
             <!--           strart col-md-3 (side bar)-->
             <aside class="col-md-3 sidebar97239">
+                <!--- Forum statistics part -->
                 <div class="status-part3821">
                     <h4>Forum statistics</h4>
                     <a href="#"><i class="fa fa-question-circle" aria-hidden="true" th:text="' Active Topics: ' + ${allTopics.size()}"> </i></a>
                     <i class="fa fa-comment" aria-hidden="true" th:text="' Registered Users: ' + ${allUsers.size()}"> </i> </div>
-                <div class="categori-part329">
-                    <h4>Category</h4>
-                    <ul>
-                        <li><a href="#">web developer</a></li>
-                        <li><a href="#">Andriod developer</a></li>
-                        <li><a href="#">grapics developer</a></li>
-                        <li><a href="#">web developer</a></li>
-                    </ul>
+                <!--              login part-->
+                <div class="login-part2389">
+                    <h4>Login</h4>
+                    <div class="input-group300"><span><i class="fa fa-user" aria-hidden="true"></i></span>
+                        <input type="text" class="namein309" placeholder="Username"></div>
+                    <div class="input-group300"><span><i class="fa fa-lock" aria-hidden="true"></i></span>
+                        <input type="password" class="passin309" placeholder="Name"></div>
+                    <a href="#">
+                        <button type="button" class="userlogin320">Log In</button>
+                    </a>
+                    <div class="rememberme">
+                        <label>
+                            <input type="checkbox" checked="checked"> Remember Me</label> <a href="#"
+                                                                                             class="resbutton3892">Register</a>
+                    </div>
                 </div>
                 <!--             social part -->
                 <div class="social-part2189">
@@ -296,22 +310,6 @@
 
                         </strong> </a>
                     </li>
-                </div>
-                <!--              login part-->
-                <div class="login-part2389">
-                    <h4>Login</h4>
-                    <div class="input-group300"><span><i class="fa fa-user" aria-hidden="true"></i></span>
-                        <input type="text" class="namein309" placeholder="Username"></div>
-                    <div class="input-group300"><span><i class="fa fa-lock" aria-hidden="true"></i></span>
-                        <input type="password" class="passin309" placeholder="Name"></div>
-                    <a href="#">
-                        <button type="button" class="userlogin320">Log In</button>
-                    </a>
-                    <div class="rememberme">
-                        <label>
-                            <input type="checkbox" checked="checked"> Remember Me</label> <a href="#"
-                                                                                             class="resbutton3892">Register</a>
-                    </div>
                 </div>
                 <!--              highest part-->
                 <div class="highest-part302">
@@ -381,54 +379,18 @@
                 <div class="tags-part2398">
                     <h4>Tags</h4>
                     <ul>
-                        <li><a href="#">analytics</a></li>
-                        <li><a href="#">Computer</a></li>
-                        <li><a href="#">Developer</a></li>
-                        <li><a href="#">Google</a></li>
-                        <li><a href="#">Interview</a></li>
-                        <li><a href="#">Programmer</a></li>
-                        <li><a href="#">Salary</a></li>
-                        <li><a href="#">University</a></li>
-                        <li><a href="#">Employee</a></li>
+                        <li th:each="tag : ${tags}">
+                            <a href="#" th:href="@{/tags/{id}(id=${tag.getId()})}" th:text="${tag.getName()}"></a>
+                        </li>
                     </ul>
                 </div>
+                <hr>
                 <!--          End tags part-->
-                <!--        start recent post  -->
-                <div class="recent-post3290">
-                    <h4>Recent Post</h4>
-                    <div class="post-details021"><a href="#"><h5>How much do web developers</h5></a>
-                        <p>I am thinking of pursuing web developing as a career & was ...</p> <small
-                                style="color: #848991">July 16, 2017</small></div>
-                    <hr>
-                    <div class="post-details021"><a href="#"><h5>How much do web developers</h5></a>
-                        <p>I am thinking of pursuing web developing as a career & was ...</p> <small
-                                style="color: #848991">July 16, 2017</small></div>
-                    <hr>
-                    <div class="post-details021"><a href="#"><h5>How much do web developers</h5></a>
-                        <p>I am thinking of pursuing web developing as a career & was ...</p> <small
-                                style="color: #848991">July 16, 2017</small></div>
-                </div>
-                <!--       end recent post    -->
-            </aside>
+               </aside>
         </div>
     </div>
 </section>
 <!--    footer -->
-<div class="footer-search">
-    <div class="container">
-        <div class="row">
-            <div id="custom-search-input">
-                <div class="input-group col-md-12"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>
-                    <input type="text" class="  search-query form-control user-control30"
-                           placeholder="Search here...."/> <span class="input-group-btn">
-                                    <button class="btn btn-danger" type="button">
-                                        <span class=" glyphicon glyphicon-search"></span> </button>
-                        </span>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
 <section class="footer-part">
     <div class="container">
         <div class="row">
@@ -449,7 +411,7 @@
             <div class="col-md-3">
                 <div class="info-part-two320">
                     <h4>Quick Links</h4>
-                    <a href="#">
+                    <a href="#" th:href="@{/}">
                         <p>-Home</p>
                     </a>
                     <a href="#">
