Frontend layout for creating new topic

--- a/src/main/resources/static/css/editor.css
+++ b/src/main/resources/static/css/editor.css
@@ -6,7 +6,7 @@
 
 .jumbotron {
     background-color: #67A754;
-    background-image: url(images/radial_bg.png);
+    background-image: url(../static/image/radial_bg.png);
     background-position: center center;
     background-repeat: no-repeat;
     background: -webkit-gradient(radial, center center, 0, center center, 460, from(#B3ECFF), to(#7EDEFF));
@@ -51,7 +51,7 @@
 }
 
 .jumbotron:after {
-    background: url("../images/pattern.png") repeat scroll center center transparent;
+    background: url("../static/images/pattern.png") repeat scroll center center transparent;
     bottom: 0;
     content: "";
     display: block;
@@ -504,4 +504,20 @@ h1 {
 
 .dropdown-menu>li>a {
     cursor: pointer;
+}
+
+.centered-width {
+    margin: 0 auto;
+    width: 90%;
+    max-width: 900px;
+}
+
+.main-content921 {
+    padding: 20px;
+    background-color: #f0f0f0;
+}
+
+.question-textarea {
+    height: 300px;
+    width: 80%;
 }
