--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,7 +14,7 @@
     <title>Sex life & problems forum</title>
     <link href="../static/css/bootstrap.css" rel="stylesheet" type="text/css" th:href="@{/css/bootstrap.css}">
     <link href="../static/css/style.css" rel="stylesheet" type="text/css" th:href="@{/css/style.css}">
-    <link href="../statis/css/animate.css" rel="stylesheet" type="text/css" th:href="@{/css/animate.css}">
+    <link href="../static/css/animate.css" rel="stylesheet" type="text/css" th:href="@{/css/animate.css}">
     <link href="../static/css/font-awesome.min.css" rel="stylesheet" type="text/css" th:href="@{/css/font-awesome.min.css}">
 </head>
 
@@ -78,7 +78,7 @@
                 <ul class="nav navbar-nav"> </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="ask_question.html">Ask Question</a></li>
+                    <li><a href="#" th:href="@{/topics/new}">Ask Question</a></li>
                     <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Question <span class="caret"></span></a>
                         <ul class="dropdown-menu animated zoomIn">
                             <li><a href="category.html">Question Category</a></li>
@@ -98,7 +98,7 @@
                         <ul class="dropdown-menu animated zoomIn">
                             <li><a href="#" th:href="@{/login}">Login</a></li>
                             <li><a href="#" th:href="@{/contact_us}" th:text="#{navigation.contactus}"> Contact Us</a></li>
-                            <li><a href="ask_question.html"> Ask Question </a></li>
+                            <li><a href="#" th:href="@{/topics/new}"> Ask Question </a></li>
                             <li><a href="#" th:href="@{/topics}"> Post-Details </a></li>
                             <li><a href="user.html">All User</a></li>
                             <li><a href="user_question.html"> User Question </a></li>
