--- a/src/main/resources/templates/user-new.html
+++ b/src/main/resources/templates/user-new.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>New User</title>
+    <title>Register</title>
     <link href="../static/css/bootstrap.css" rel="stylesheet" type="text/css" th:href="@{/css/bootstrap.css}">
     <link href="../static/css/style.css" rel="stylesheet" type="text/css" th:href="@{/css/style.css}">
     <link href="../static/css/animate.css" rel="stylesheet" type="text/css" th:href="@{/css/animate.css}">
@@ -61,7 +61,7 @@
     </div>
 
     <div class="form-container">
-        <h2 class="text-center">New User</h2>
+        <h2 class="text-center">Register</h2>
         <form action="#" th:action="@{/users/new}" th:object="${user}" method="post">
             <label th:text="#{user.username}">User</label>
             <br/>
