clickable option for user edit

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -29,19 +29,29 @@
                         <li><a href="mailto:telerikforums@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i>Contact</a></li>
                         <li><a href="#"><i class="fa fa-headphones" aria-hidden="true"></i>Support</a></li>
                         &nbsp;
-                        <!-- Use Thymeleaf expression to check if the user is logged in -->
                         <li>
+                            <!-- Use Thymeleaf expression to check if the user is logged in -->
                             <!-- If the currentUser session attribute is not null, display the logout link -->
                             <a th:href="@{/auth/logout}" th:if="${session.currentUser} != null">
                                 <i class="fa fa-sign-out" aria-hidden="true"></i>Logout
                             </a>
-                            &nbsp;
                             <!-- If the currentUser session attribute is null, display the login link -->
                             <a th:href="@{/auth/login}" th:if="${session.currentUser} == null">
                                 <i class="fa fa-user" aria-hidden="true"></i>&nbsp;Login Area
                             </a>
-                            <!-- Display the username if the user is logged in -->
-                            <span th:text="${session.currentUser}" th:if="${session.currentUser} != null"></span>
+                            <ul>
+                                <li th:if="${session.currentUser} != null">
+                                    <!-- If the user is logged in, display the link to edit their profile -->
+                                    <a th:href="@{/users/profile}">
+                                        <i class="fa fa-user" aria-hidden="true"></i>&nbsp;
+                                        <span th:text="${session.currentUser}"></span>
+                                    </a>
+                                </li>
+                            </ul>
+
+                            <div class="navbar-menu-right-side">
+
+                            </div>
                         </li>
                     </ul>
                 </div>
@@ -53,15 +63,17 @@
                             <label for="srch-term"></label>
                             <input class="form-control form-control222" placeholder="Search" id="srch-term" type="text">
                             <div class="input-group-btn">
-                                <button class="btn btn-default btn-default2913" type="button" th:field="*{title}"><i class="glyphicon glyphicon-search"></i></button>
+                                <button class="btn btn-default btn-default2913" type="button"><i class="glyphicon glyphicon-search"></i></button>
                             </div>
                         </div>
                     </form>
                 </div>
+
             </div>
         </div>
     </div>
 </div>
+
 
 
 <!-- ==========header mega navbar=======-->
