--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -456,15 +456,6 @@
                                    th:text="' Active Topics: ' + ${allTopics.size()}"> </i></a>
                     <i class="fa fa-comment" aria-hidden="true"
                        th:text="' Registered Users: ' + ${allUsers.size()}"> </i></div>
-                <div class="categori-part329">
-                    <h4>Category</h4>
-                    <ul>
-                        <li><a href="#">web developer</a></li>
-                        <li><a href="#">Andriod developer</a></li>
-                        <li><a href="#">grapics developer</a></li>
-                        <li><a href="#">web developer</a></li>
-                    </ul>
-                </div>
                 <!--             social part -->
                 <div class="social-part2189">
                     <h4>Find us</h4>
@@ -714,9 +705,9 @@
     </div>
 </section>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script src="../static/js/jquery-3.1.1.min.js" th:href="@{/js/jquery-3.1.1.min.js}"></script>
-<script src="../static/js/bootstrap.min.js" th:href="@{/js/bootstrap.min.js}"></script>
-<script src="../static/js/npm.js" th:href="@{/js/npm.js}"></script>
+<script src="/js/jquery-3.1.1.min.js" th:href="@{/js/jquery-3.1.1.min.js}"></script>
+<script src="/js/bootstrap.min.js" th:href="@{/js/bootstrap.min.js}"></script>
+<script src="/js/npm.js" th:href="@{/js/npm.js}"></script>
 </body>
 
 </html>
